--- a/main.html
+++ b/main.html
@@ -8,6 +8,44 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<div>
+			<label for="name">Name*</label>
+			<input type="text" id="name" required>
+		</div>
+		<div>
+			<label for="email">Email*</label>
+			<input type="email" id="email" required>
+		</div>
+		<div>
+			<label for="Gender">Gender*</label>
+			<input type="radio" value="male" name="gender" required>
+			<input type="radio" name="gender" required>
+		</div>
+		<div>
+			<label for="car">Car Brands</label>
+			<select id="car">
+				<option>BMW</option>
+				<option>Audi</option>
+				<option>Mercedez</option>
+			</select>
+		</div>
+		<div>
+			<label for="carage">Car Age*</label>
+			<input type="number" id="carage" required>
+		</div>
+		<div>
+			<label for="dop">Date of Purchase(dop)</label>
+			<input type="date" id="dop" required>
+		</div>
+		<div>
+			<label for="password">Password</label>
+			<input type="password" id="password" required>
+		</div>
+		<div>
+			<button type="submit">submit</button>
+		</div>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
