--- a/main.html
+++ b/main.html
@@ -23,8 +23,8 @@
 			<input type="radio" name="gender" required>
 		</div>
 		<div>
-			<label for="car">Car Brands</label>
-			<select id="car">
+			<label for="cars">Car Brands</label>
+			<select id="cars">
 				<option>BMW</option>
 				<option>Audi</option>
 				<option>Mercedez</option>
